feat(users): добавить создание руководителей с подчиненными
