# src/auth/auth.controller.ts
@@ -1,7 +1,7 @@
-import { Controller, Post, UseGuards, Req } from '@nestjs/common';
+import { Controller, Post, UseGuards, Req, Body } from '@nestjs/common';
 import { AuthService } from './auth.service';
 import { LocalGuard } from './guards/localAuth.guard';
-import { TJwtRequest } from 'src/utils/types/types';
+import { ITokens, TJwtRequest } from 'src/utils/types/types';
 import { User } from 'src/users/entities/user.entity';
 
 @Controller('auth')
@@ -12,5 +12,12 @@ export class AuthController {
   @Post('signin')
   async signin(@Req() req: TJwtRequest): Promise<User> {
     return this.authService.auth(req.user.id);
+  }
+
+  @Post('refresh-token')
+  async refreshToken(
+    @Body('refreshToken') refreshToken: string,
+  ): Promise<ITokens> {
+    return this.authService.refreshToken(refreshToken);
   }
 }
