# src/users/users.controller.ts
@@ -9,6 +9,7 @@ import {
   UseGuards,
   UseInterceptors,
   ClassSerializerInterceptor,
+  Req,
 } from '@nestjs/common';
 import { UsersService } from './users.service';
 import { CreateUserDto } from './dto/create-user.dto';
@@ -19,6 +20,7 @@ import { JwtGuard } from 'src/auth/guards/jwtAuth.guards';
 import { TransformUserDtoPipe } from 'src/auth/pipes/signup.pipe';
 import { User } from './entities/user.entity';
 import { Action } from 'src/ability/ability.factory';
+import { TJwtRequest } from 'src/utils/types/types';
 
 @UseGuards(JwtGuard, AbilityGuard)
 @Controller('users')
@@ -30,14 +32,21 @@ export class UsersController {
   @Post()
   async register(
     @Body(TransformUserDtoPipe) createUserDto: CreateUserDto,
+    @Req() req: TJwtRequest,
   ): Promise<User> {
-    return await this.usersService.create(createUserDto);
+    return await this.usersService.create(createUserDto, req.ability);
   }
 
   @CheckAbility({ action: Action.Read, subject: CreateUserDto })
   @Get()
   async findAll() {
     return await this.usersService.findAll();
+  }
+
+  @CheckAbility({ action: Action.Read, subject: CreateUserDto })
+  @Get('me')
+  async find(@Req() req: TJwtRequest) {
+    return await this.usersService.findMe(req.user.id);
   }
 
   @UseInterceptors(ClassSerializerInterceptor)
